--- a/.env-example
+++ b/.env-example
@@ -1,11 +1,11 @@
 # Data General App
-APP_TITLE="Cyber Stock"
+APP_TITLE="Name_app"
 APP_PORT=3000
 APP_HOST=localhost
 
-# Database
+# Database Mongo
 DATABASE_HOST=127.0.0.1
 DATABASE_USER=root
 DATABASE_PASSWORD=
-DATABASE_NAME="cyber_stock"
+DATABASE_NAME=NAME_DATABASE
 DATABASE_PORT=27017
